# Garfield-tutorial

./: CMakeLists.txt  ELMERSOLVER_STARTINFO  Field.sif  Field_WTlel.sif  GEM_example.geo  Makefile  README  README.md  completeavalanche.cc  standard_GEM.geo  viewfield.cc
